<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentWhether" >

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/whetherImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:src="@drawable/rain" />

    <TextView
        android:id="@+id/cityNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressure" />

    <TextView
        android:id="@+id/pressureView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressure" />

    <TextView
        android:id="@+id/temperatureView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/whetherCondView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind" />

    <TextView
        android:id="@+id/weekdayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind" />

    <TextView
        android:id="@+id/windView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind" />


</LinearLayout>